tests/samples/negative/generics/generic_enum_type_arity.ax
module generic_enum_type_arity;

enum Option<T>: u8 {
    none = 0,
    some(T) = 1,
}

fn main() -> i32 {
    let value: Option = Option.some(1);
    return 0;
}
